fix: middle vertical-align for .avatar elements

--- a/public/less/generics.less
+++ b/public/less/generics.less
@@ -75,6 +75,7 @@
 	text-align: center;
 	color: @gray-lighter;
 	font-weight: normal;
+	vertical-align: middle;
 	overflow: hidden;	/* stops alt text from overflowing past boundaries if image does not load */
 
 	&:before {
